<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="E_STATES" Id="{fc8681e9-91f6-4590-8d60-5d77b368b1a7}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_STATES :
(
	INIT := 0,
	SETUP,
	OVERRIDE,
	READY,
	NOT_SAFE
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>